# llvm-project-nested-funcs

./: CONTRIBUTING.md  README.md  run.sh  test2.c
clang-tools-extra/: CMakeLists.txt
clang-tools-extra/hoist/: CMakeLists.txt  Hoist.cpp
clang-tools-extra/loop-convert/: '  :w  CMakeLists.txt  LoopConvert.cpp  LoopConvert2.cpp  LoopConvertInitial.cpp  tags
clang-tools-extra/prep/: CMakeLists.txt  Prep.cpp
clang-tools-extra/preprep/: :q  CMakeLists.txt  PrepPrep.cpp
tests/: ____depth.c  __akshay_struct.c  __array.c  __arrtest.c  __arrtest2.c  __call_resolution.c  __callres.c  __depth.c  __fact.c  __factmix.c  __global.c  __orig.c  __orig.c.c  __quicksort.c  __structrenaming.c  __structtest.c  __structtestcomp.c  __structtestrenaming.c  __test.c  __test2.c  __test3.c  __test4.c  __test5.c  __test6.c  __test7.c  __variable_resoltion.c  a.out  akshay_struct.c  array.c  arrtest.c  arrtest2.c  call_resolution.c  callres.c  depth.c  fact.c  factmix.c  global.c  hoist.c  orig.c  quicksort.c  (+14 more)
tests/test/: cmake_install.cmake  lit.site.cfg.py
tests/test/Unit/: lit.site.cfg.py
testsfinal/: __callres.c  __localstruct.c  __varresolution.c  a.out  callres.c  depth.c  localstruct.c  run.sh  varresolution.c
